--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -1,13 +1,5 @@
-<div id="home">
-
-  {{!-- brand container --}}
+{{!-- brand container --}}
   <div class="container">
-
-    <div class="row center-align">
-      <div class="col s12">
-        <h1 class="main">Brand</h1>
-      </div>
-    </div>
 
     {{!-- second "nav" --}}
     <div class="row center-align" style="min-height: 30px" id="sec-nav">
@@ -56,7 +48,7 @@
 <div class="row">
     <div class="hero-image" id="categories-hero-image">
       <div class="hero-text">
-        <h2>Women's Health</h2>
+        <h3>Women's Health</h3>
       </div>
     </div>
 </div>
@@ -70,7 +62,16 @@
 </div>
 
 {{!-- Article Results go here dynamically using API and javascript--}}
-<div class="row results-body"></div>
+  <div class="row container results-body" style="width:90%"></div>
+      <!-- Article cards go here -->
 
 
+
+<!-- jQuery JS -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- Moment JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<!--JavaScript at end of body for optimized loading-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/categories.js"></script>
 
