--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,21 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/styles/reset.css">
-  {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> --}}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/images/lean-toLogo.svg">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/reset.css">
   <link rel="stylesheet" href="/styles/materialize.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-
-  <title>Home Page</title>
-
+  <title>Lean To</title>
 </head>
 
 {{!-- 1st nav --}}
 <div class="navbar-fixed">
-  <nav id="first-nav">
+  <nav id="first-nav"> 
     <div class="nav-wrapper first-nav">
-      {{!-- <a href="#" class="brand-logo right">Logo</a> --}}
       <ul id="nav-mobile" class="left">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
@@ -34,12 +33,11 @@
                 <div class="col s12">
                   <h6>
                     Volunteering will give you the chance to create the kind of community you would like to live in. By
-                    volunteering, you will meet new people who may later become your friend or boss. As a volunteer you
-                    will provide meaningful connections to all within our community and give back to neighbors who need
-                    a little help. Our volunteer experiences are varied, so you will find something that will be a good
-                    fit for your available time and interests. If you think this is right for you, then please fill out
-                    the short form below and our Volunteer Program Manager will be in touch with you.
-                    Thank you for your time!
+                    volunteering, you will meet new people who may later become your friend or colleague. As a volunteer, you 
+                    will provide meaningful connections to all within our community and give back to neighbors who need 
+                    a little help. Our volunteer experiences are varied, so you will find something that will be a good 
+                    fit for your availabilty and interests. If you think this is right for you, then please fill out 
+                    the short form below and our Volunteer Program Manager will be in touch with you. Thank you for your time!
                   </h6>
                 </div>
               </div>
@@ -444,15 +442,21 @@
 
 <div class="footer">
   © 2019 Copyright
-  <a class="social-icons" href="https://github.com/ckayv11/project2" target="_blank"><i
-      class="fab fa-github fa-2x"></i></a>
-  <a class="social-icons" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
-  <a class="social-icons" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+  <a class="social-icons" href="#" target="_blank"><i class="fab fa-pinterest-p fa-2x"></i></a>
+  <a class="social-icons" href="#" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+  <a class="social-icons" href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+  <a class="social-icons" href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
 </div>
 
 <script src="https://kit.fontawesome.com/85f0bdccf3.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/materialize.js"></script>
-<script src="/js/index.js"></script>
+<!-- jQuery JS -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- Moment JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<!--JavaScript at end of body for optimized loading-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/materialize.js"></script>
+<script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/js/categories.js"></script>
 
 </html>
