added news api functions

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -150,6 +150,11 @@ a {
    color: black;
 }
 
+.article-card {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 .article-card, #first-nav, .card-panel {
   -webkit-box-shadow: none;
 }
