updated request modal on main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -332,73 +332,62 @@
                       </p>
                     </div>
                   </div>
-                  <h4>Services</h4>
-                  <h6>What services can we help you with?</h6>
-                  <p>
+                                  <h4>Services Offered</h4>
+                <h6>What service can we help you with?</h6>
+                <p>
                     <label>
-                      <input id="transportation" type="checkbox" class="filled-in" />
-                      <span>Transportation</span>
+                        <input id="transportation" class="with-gap" name="transportation" type="radio" />
+                        <span>Transportation</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="pet_care" type="checkbox" class="filled-in" />
-                      <span>Pet Care</span>
+                        <input id="pet_care" class="with-gap" name="pet_care" type="radio" />
+                        <span>Pet Care</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="babysitting" type="checkbox" class="filled-in" />
-                      <span>Babysitting</span>
+                        <input id="babysitting" class="with-gap" name="babysitting" type="radio" />
+                        <span>Babysitting</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="groceries" type="checkbox" class="filled-in" />
-                      <span>Groceries</span>
+                        <input id="groceries" class="with-gap" name="groceries" type="radio" />
+                        <span>Groceries</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="errands" type="checkbox" class="filled-in" />
-                      <span>Errands</span>
+                        <input id="errands" class="with-gap" name="errands" type="radio" />
+                        <span>Errands</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="yardwork" type="checkbox" class="filled-in" />
-                      <span>Yardwork</span>
+                        <input id="yardwork" class="with-gap" name="yardwork" type="radio" />
+                        <span>Yardwork</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="housekeeping" type="checkbox" class="filled-in" />
-                      <span>Housekeeping</span>
+                        <input id="housekeeping" class="with-gap" name="housekeeping" type="radio" />
+                        <span>Housekeeping</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="home_projects" type="checkbox" class="filled-in" />
-                      <span>Home Projects</span>
+                        <input id="home_projects" class="with-gap" name="home_projects" type="radio" />
+                        <span>Home Projects</span>
                     </label>
-                  </p>
-                  <p>
+                </p>
+                <p>
                     <label>
-                      <input id="movers" type="checkbox" class="filled-in" />
-                      <span>Movers</span>
+                        <input id="movers" class="with-gap" name="movers" type="radio" />
+                        <span>Movers</span>
                     </label>
-                  </p>
-                  <h6>Tell us a little bit about what you would like done.</h6>
-                  <div class="row">
-                    <form class="col s12">
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <textarea id="textarea1" class="materialize-textarea"></textarea>
-                          <label for="textarea1">Describe what you need</label>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
+                </p>
                   <a class="modal-close waves-effect waves-light btn">Submit</a>
                 </form>
               </div>
