added admin page

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -267,55 +267,55 @@
                 <h6>What service can we help you with?</h6>
                 <p>
                     <label>
-                        <input id="transportation" class="with-gap" name="transportation" type="radio" />
+                        <input id="transportation" class="with-gap" name="services" type="radio" />
                         <span>Transportation</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="pet_care" class="with-gap" name="pet_care" type="radio" />
+                        <input id="pet_care" class="with-gap" name="services" type="radio" />
                         <span>Pet Care</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="babysitting" class="with-gap" name="babysitting" type="radio" />
+                        <input id="babysitting" class="with-gap" name="services" type="radio" />
                         <span>Babysitting</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="groceries" class="with-gap" name="groceries" type="radio" />
+                        <input id="groceries" class="with-gap" name="services" type="radio" />
                         <span>Groceries</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="errands" class="with-gap" name="errands" type="radio" />
+                        <input id="errands" class="with-gap" name="services" type="radio" />
                         <span>Errands</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="yardwork" class="with-gap" name="yardwork" type="radio" />
+                        <input id="yardwork" class="with-gap" name="services" type="radio" />
                         <span>Yardwork</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="housekeeping" class="with-gap" name="housekeeping" type="radio" />
+                        <input id="housekeeping" class="with-gap" name="services" type="radio" />
                         <span>Housekeeping</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="home_projects" class="with-gap" name="home_projects" type="radio" />
+                        <input id="home_projects" class="with-gap" name="services" type="radio" />
                         <span>Home Projects</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input id="movers" class="with-gap" name="movers" type="radio" />
+                        <input id="movers" class="with-gap" name="services" type="radio" />
                         <span>Movers</span>
                     </label>
                 </p>
