--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -215,8 +215,18 @@ h5 {
   margin-top: 10px;
 }
 
+#admin-hero-image {
+  background-image: url('../images/calendar.jpg');
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-top: 10px;
+}
+
 .hero-text h3 {
-  font-size: 40px;
+  font-size: 2.5rem;
   background-color: #897a92a9;
   color: whitesmoke;
   text-align: center;
@@ -226,7 +236,7 @@ h5 {
   transform: translate(-50%, -50%);
   padding-right: 20px;
   padding-left: 20px;
-  width: 50%;
+  width: fit-content;
 }
 
 #services-hero-image {
