models set up correctly. trying to post data from forms now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -207,8 +207,8 @@
     </div>
   </div>
 
-    {{!-- example code below
-    <div class="row">
+    {{!-- example code below --}}
+    {{!-- <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>This is our Home Page!</h2>
@@ -236,6 +236,7 @@
         </ul>
       </div>
     </div> --}}
+
   </div>
 </div>
 </div>
