--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -532,3 +532,6 @@
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+<script type="text/javascript" src="/js/services.js"></script>
