trying to get volunteer info to populate just at bottom of services page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -208,7 +208,7 @@
   </div>
 
     {{!-- example code below --}}
-    {{!-- <div class="row">
+    <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>This is our Home Page!</h2>
@@ -235,7 +235,7 @@
           {{/each}}
         </ul>
       </div>
-    </div> --}}
+    </div>
 
   </div>
 </div>
